# arrow-pacman

./: .gitignore  README.md  main.c  meson.build  meson_options.txt
arrow-pacman-data/levels/: demo
include/: def.h  game.h  included.h  license.h  main.h  mainmenu.h  pacman.h  scores.h  settings.h
include/level/: files.h  level.h  levelfiles.h  status.h
include/level/editor/: editor.h  editsprites.h  init.h  pick.h  sidebar.h
include/map/: map.h
include/sprites/: ghost.h  player.h  routes.h  sprites.h  way.h
src/: game.c  main.c  mainmenu.c  scores.c  settings.c
src/level/: files.c  level.c  status.c
src/level/editor/: editor.c  editsprites.c  init.c  pick.c  sidebar.c
src/map/: map.c
src/sprites/: ghost.c  player.c  routes.c  sprites.c  way.c
subprojects/: cstuff.wrap
